--- a/src/app/projects/view/view.component.css
+++ b/src/app/projects/view/view.component.css
@@ -53,3 +53,11 @@
     font-size: 18px;
     
 }
+
+.v54 {
+    border-bottom: 6px slategrey;
+    border-bottom-style: groove;
+    border-width: 2px;
+    /* border-left: 6px solid green; */
+    /* height: 500px; */
+}
