--- a/src/app/projects/p-create/p-create.component.html
+++ b/src/app/projects/p-create/p-create.component.html
@@ -127,7 +127,7 @@
                                                     </div>
                                                     <div class="col-md-1 mr-auto">
                                                         <button type="submit" (click)="testProjectFilds(project, typeSet, setCompany, setChampion)"
-                                                            name="enterprise_sector" class="btn-link">Next</button>
+                                                            name="enterprise_sector" class="btn-link">Save</button>
                                                     </div><!-- (click)="saveProject()" -->
                                                 </div>
                                             </div>
