--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -117,7 +117,7 @@
                                                     </div>
                                                     <div class="col-md-1 mr-auto">
                                                         <button type="submit" (click)="testProjectFilds(project, typeSet, setCompany, setChampion)"
-                                                         name="enterprise_sector" class="btn-link">Save</button>
+                                                         name="enterprise_sector" class="btn-link">Next</button>
                                                     </div><!-- (click)="saveProject()" -->
                                                 </div>
                                             </div>
