--- a/src/app/calendar/personal-reports/r-daily-plan/r-daily-plan.component.html
+++ b/src/app/calendar/personal-reports/r-daily-plan/r-daily-plan.component.html
@@ -10,14 +10,14 @@
         <button class="btn-link btn-magnify" (click)="rService.Back()">Back</button>
     </div> 
 
-<h2 id="UserP3">User</h2>
+<h2 id="User-dpp">User</h2>
 
 <h4 margin-top:-150px>Daily Plan As At <span>
-        <input type="date" id="startdateP3">
-        <button id="btnP3" (click)="rService.rdailyplan()">Generate Daily Plan</button>
+        <input type="date" id="startdate-dpp">
+        <button id="btn-dpp" (click)="rService.rdailyplan()">Generate Daily Plan</button>
     </span></h4>
 
-<table id="TbIdP3">
+<table id="TbId-dpp">
     <!-- headings -->
     <tr>
         <th>Sub Task</th>
