--- a/src/app/calendar/personal-reports/r-time-actual/r-time-actual.component.html
+++ b/src/app/calendar/personal-reports/r-time-actual/r-time-actual.component.html
@@ -11,16 +11,16 @@
     </div> 
     
     <!-- Table heading -->
-    <h2 id="UserP6"style="margin-top:-0.5em" >User</h2>
+    <h2 id="User-tap"style="margin-top:-0.5em" >User</h2>
 
     <h4 style="margin-top:-0.5em">My Time Budget versus Actuals for the period from <span>
-        <input type="date" id="startdateP6">
+        <input type="date" id="startdate-tap">
         </span> to <span>
-        <input type="date" id="enddateP6">
-    <button id="btnP6" (click)="rService.rtimeactual()">View Time Budget vs Actuals</button>
+        <input type="date" id="enddate-tap">
+    <button id="btn-tap" (click)="rService.rtimeactual()">View Time Budget vs Actuals</button>
     </span></h4>
     <!-- Table rows and headings only -->
-    <table id="TbIdP6">
+    <table id="TbId-tap">
         <!-- headings -->
         <tr>
             <th>Life Classification Description</th>
