--- a/src/app/calendar/personal-reports/r-time-budget/r-time-budget.component.html
+++ b/src/app/calendar/personal-reports/r-time-budget/r-time-budget.component.html
@@ -10,13 +10,13 @@
         <button class="btn-link btn-magnify" (click)="rService.Back()">Back</button>
     </div> 
     
-    <h2 id="UserP5"style="margin-top:-0.5em" >User</h2>
+    <h2 id="User-tbp"style="margin-top:-0.5em" >User</h2>
 
     <h4 style="margin-top:-0.5em">My Time Budget <span>
-    <button id="btnP5" (click)="rService.rtimebudget()">View Time Budget</button>
+    <button id="btn-tbp" (click)="rService.rtimebudget()">View Time Budget</button>
     </span></h4>
     <!-- Table rows and headings only -->
-    <table id="TbIdP5">
+    <table id="TbId-tbp">
         <!-- headings -->
         <tr>
             <th>Life Classification Description</th>
