--- a/src/app/calendar/personal-reports/r-weekly-plan/r-weekly-plan.component.html
+++ b/src/app/calendar/personal-reports/r-weekly-plan/r-weekly-plan.component.html
@@ -10,14 +10,14 @@
         <button class="btn-link btn-magnify" (click)="rService.Back()">Back</button>
     </div> 
 
-<h2 id="UserP4" style="margin-top:-0.5em">User</h2>
+<h2 id="User-wpp" style="margin-top:-0.5em">User</h2>
 
 <h4 style="margin-top:-0.5em">Weekly Plan As At <span>
-        <input type="date" id="startdateP4">
-        <button id="btnP4" (click)="rService.rweeklyplan()">Generate Weekly Plan</button>
+        <input type="date" id="startdate-wpp">
+        <button id="btn-wpp" (click)="rService.rweeklyplan()">Generate Weekly Plan</button>
     </span></h4>
 
-<table id="TbIdP4">
+<table id="TbId-wpp">
     <!-- headings -->
     <tr>
         <th>Sub Task</th>
