--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -465,7 +465,7 @@
                               <div class="row">
                                 <div class="col-md-6">
                                   <p class="text-left title " style="color: darkslategray">
-                                    <span> <a routerLink="../../PersonalWeeklyPlan-report">My Weekly Plan</a></span>
+                                    <span> <a routerLink="../../r-weeklyplan">My Weekly Plan</a></span>
                                   </p>
                                 </div>
                               </div>
@@ -475,7 +475,7 @@
                               <div class="row">
                                 <div class="col-md-6">
                                   <p class="text-left title " style="color: darkslategray">
-                                    <span> <a routerLink="../../PersonalDailyPlan-report">My Daily Plan</a></span>
+                                    <span> <a routerLink="../../r-dailyplan">My Daily Plan</a></span>
                                   </p>
                                 </div>
                               </div>
@@ -485,7 +485,7 @@
                               <div class="row">
                                 <div class="col-md-6">
                                   <p class="text-left title " style="color: darkslategray">
-                                    <span> <a routerLink="../../outstandingTask-report">Outstanding Tasks</a></span>
+                                    <span> <a routerLink="../../r-ostasks">Outstanding Tasks</a></span>
                                   </p>
                                 </div>
                               </div>
@@ -495,7 +495,7 @@
                               <div class="row">
                                 <div class="col-md-6">
                                   <p class="text-left title " style="color: darkslategray">
-                                    <span> <a routerLink="../../timeSpent-report">Total time spent on an activity in a period</a></span>
+                                    <span> <a routerLink="../../r-timespent">Total time spent on an activity in a period</a></span>
                                   </p>
                                 </div>
                               </div>
@@ -506,7 +506,7 @@
                               <div class="row">
                                 <div class="col-md-6">
                                   <p class="text-left title " style="color: darkslategray">
-                                    <span> <a routerLink="../../activity-reportLog">Time sheet report in a period</a></span>
+                                    <span> <a routerLink="../../r-activitylog">Time sheet report in a period</a></span>
                                   </p>
                                 </div>
                               </div>
@@ -620,7 +620,7 @@
                               <div class="row">
                                 <div class="col-md-6">
                                   <p class="text-left title " style="color: darkslategray">
-                                    <span> <a routerLink="../../PersonalWeeklyPlan-report">My Weekly Plan</a></span>
+                                    <span> <a routerLink="../../r-weeklyplan">My Weekly Plan</a></span>
                                   </p>
                                 </div>
                               </div>
@@ -630,7 +630,7 @@
                               <div class="row">
                                 <div class="col-md-6">
                                   <p class="text-left title " style="color: darkslategray">
-                                    <span> <a routerLink="../../PersonalDailyPlan-report">My Daily Plan</a></span>
+                                    <span> <a routerLink="../../r-dailyplan">My Daily Plan</a></span>
                                   </p>
                                 </div>
                               </div>
@@ -640,7 +640,7 @@
                               <div class="row">
                                 <div class="col-md-6">
                                   <p class="text-left title " style="color: darkslategray">
-                                    <span> <a routerLink="../../outstandingTask-report">Outstanding Tasks</a></span>
+                                    <span> <a routerLink="../../r-ostasks">Outstanding Tasks</a></span>
                                   </p>
                                 </div>
                               </div>
@@ -650,7 +650,7 @@
                               <div class="row">
                                 <div class="col-md-6">
                                   <p class="text-left title " style="color: darkslategray">
-                                    <span> <a routerLink="../../timeSpent-report">Total time spent on an activity in a period</a></span>
+                                    <span> <a routerLink="../../r-timespent">Total time spent on an activity in a period</a></span>
                                   </p>
                                 </div>
                               </div>
@@ -661,7 +661,7 @@
                               <div class="row">
                                 <div class="col-md-6">
                                   <p class="text-left title " style="color: darkslategray">
-                                    <span> <a routerLink="../../activity-reportLog">Time sheet report in a period</a></span>
+                                    <span> <a routerLink="../../r-activitylog">Time sheet report in a period</a></span>
                                   </p>
                                 </div>
                               </div>
