--- a/src/app/calendar/personal-reports/r-os-tasks/r-os-tasks.component.html
+++ b/src/app/calendar/personal-reports/r-os-tasks/r-os-tasks.component.html
@@ -10,15 +10,15 @@
             <button class="btn-link btn-magnify" (click)="rService.Back()">Back</button>
         </div> 
     
-        <h2 id="UserP0" style="margin-top:-0.5em">User</h2>
+        <h2 id="User-ostp" style="margin-top:-0.5em">User</h2>
     
         <h4 style="margin-top:-0.5em">Schedule of Outstanding Tasks as at <span>
                 <!-- placeholder will not work, so stuck with dd----yyyyy -->
-                <input type="date" id="startdateP0">
-        <button id="btnP0" (click)="rService.rostasks()">View Oustanding Tasks for selected date</button>
+                <input type="date" id="startdate-ostp"> &nbsp;&nbsp;
+        <button id="btn-ostp" (click)="rService.rostasks()">View Oustanding Tasks</button>
         </span></h4>
         <!-- Table rows and headings only -->
-        <table id="TbIdP0">
+        <table id="TbId-ostp">
             <!-- headings -->
             <tr>
                 <th>Task</th>
