--- a/src/app/calendar/personal-reports/r-time-spent/r-time-spent.component.html
+++ b/src/app/calendar/personal-reports/r-time-spent/r-time-spent.component.html
@@ -10,24 +10,25 @@
         <button class="btn-link btn-magnify" (click)="rService.Back()">Back</button>
     </div> 
     
-    <h2 id="UserP1" style="margin-top:-0.5em">User</h2>
+    <h2 id="User-tsp" style="margin-top:-0.5em">User</h2>
 
     <h4 style="margin-top:-0.6em">Total Time spent on an Activity for the period from <span>
             <!-- placeholder will not work, so stuck with dd----yyyyy -->
-            <input type="date" id="startdateP1">
+            <input type="date" id="startdate-tsp">
         </span> to <span>
-            <input type="date" id="enddateP1">
+            <input type="date" id="enddate-tsp">
     <!-- <button (click)="rService.rtimespentshow()">Generate report for selected period</button> -->
-    <button id="btnP1" (click)="rService.rtimespent()">Generate report for selected period</button>
+    <button id="btn-tsp" (click)="rService.rtimespent()">Generate report for selected period</button>
     </span></h4>
     <!-- button onclick="javascript:alert('kkkkk')">Try it</button> -->
     <!-- button (click)="rService.clearTable()">Clear table</button> -->
     <!-- Table rows and headings only -->
-    <table id="TbIdP1">
+    <table id="TbId-tsp">
         <!-- headings -->
         <tr>
             <th>Sub Task</th>
             <th>Task Name</th>
+            <th>Classification</th>
             <th style="text-align:center">Hours Spent</th>
             <th>Company Name</th>
         </tr>
