--- a/src/app/enterprise-rpts/enterprise-personal-reports/r-daily-plan-e/r-daily-plan-e.component.html
+++ b/src/app/enterprise-rpts/enterprise-personal-reports/r-daily-plan-e/r-daily-plan-e.component.html
@@ -8,18 +8,18 @@
         <button class="btn-link btn-magnify" (click)="rService.Back()">Back</button>
     </div> 
 
-<h3 id="org3" style="margin-top:-0.5em">Personal Reports</h3>
+<h3 id="org-dpe" style="margin-top:-0.5em">Personal Reports</h3>
 
 <h3 style="margin-top:-0.5em">Participant:
-    <span><select id="name-list3"></select></span>
+    <span><select id="name-list-dpe"></select></span>
     <span> &nbsp;&nbsp; Hierarchy:</span><span>{{rService.User_Hky}}</span></h3>
 
 <h4 style="margin-top:-0.5em">Daily Plan As At <span>
-        <input type="date" id="startdate3">
-        <button id="btn3" (click)="rService.rdailyplan_e()">Generate Daily Plan</button>
+        <input type="date" id="startdate-dpe">
+        <button id="btn-dpe" (click)="rService.rdailyplan_e()">Generate Daily Plan</button>
     </span></h4>
 
-<table id="TbId3">
+<table id="TbId-dpe">
     <!-- headings -->
     <tr>
         <th>Sub Task</th>
