--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -101,6 +101,88 @@
         </div>
       </div>
     </div>
+    <!-- <div class="col-lg-4 col-sm-6">
+      <div class="card">
+        <div class="card-content btn-magnify">
+          <div class="col-sm-12 ml-auto mr-auto" style="padding-bottom: -1em ">
+            <div class="clrs-h1-font">
+              <a><i class="nc-icon nc-palette"></i> Colours Personal</a>
+            </div><br>
+            <div class="text-left col-md-10" style="padding-top: -1em; color: steelblue; ">
+              <a>My Diary Today</a>
+            </div>
+          </div>
+          <div class="spacer" style="height: 1em;"></div>
+          <div class="content">
+            <div class="content container scroll-em" *ngIf="actionNo != 0" style="height: 100px">
+              <ol>
+                <li class="setLists col-xs-12 ml-auto mr-auto" style="color:steelblue" *ngFor="let item of myActionItems">
+                    <a class="col-md-12" style="color:steelblue; padding-right: 2px;padding-left: 4px;">
+                      <span class="col-md-8" style="width:24em;">{{ item.name }} </span>
+                      <span *ngIf="item.start" class="pull-right" style="margin-right:2em">
+                        <span></span>
+                        <span class="number text-warning"><small>  {{ item.start }} hrs</small></span>
+                      </span>
+                    </a>
+                </li>
+              </ol>
+            </div>
+            <div class="content container scroll-em" *ngIf="actionNo == 0">
+              <div class="row">
+                <div class="col-sm-12" style="margin-left:-.5em; margin-right:-.5em">
+                  <ol>
+                    <li style="color:steelblue">
+                        <a style="color:lightgrey">
+                          <span class="col-md-9 col-10 text-info">Meeting</span>
+                          <span class="col-md-3 mr-auto number text-warning"> 1000 hrs</span>
+                        </a>
+                    </li>
+                    <li style="color:steelblue">
+                        <a style="color:lightgrey">
+                          <span class="col-md-9 text-info">Email</span>
+                          <span class="col-md-3 mr-auto ml-auto number text-success">1230 Hrs</span>
+                        </a>
+                    </li>
+                    <li style="color:steelblue">
+                        <a style="color:lightgrey">
+                          <span class="col-md-9 text-info">Skype</span>
+                          <span class="col-md-3 mr-auto ml-auto label text-success"> 1400 Hrs </span>
+                        </a>
+                    </li>
+                    <li style="color:steelblue">
+                        <a style="color:lightgrey">
+                          <span class="col-md-9 text-info">Scheduling</span>
+                          <span class="col-lg-3 mr-auto ml-auto label text-success"> 0800 Hrs </span>
+                        </a>
+                    </li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <div class="card-body">
+          <h6 class="big-title">total earnings in last ten quarters</h6>
+          <canvas id="activeUsers" width="826" height="380"></canvas>
+        </div>
+        <div class="card-footer">
+          <hr>
+          <div class="row">
+            <div class="col-sm-7">
+              <div class="footer-title">View more details</div>
+            </div>
+            <div class="col-sm-5">
+              <div class="pull-right">
+                <button class="btn btn-success btn-round btn-icon btn-sm">
+                  <i class="nc-icon nc-simple-add"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
     <div class="col-lg-4 col-sm-6">
     <!-- <div class="col-xs-3 col-sm-4 dash-col"> -->
       <div class="card">
